--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -52,13 +52,13 @@ jobs:
         with:
           terraform_version: 1.2.6
           terraform_wrapper: false
-      - name: Configure AWS Credentials For Terraform
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: arn:aws:iam::631181914621:role/modernising-lpa-github-actions-terraform
-          aws-region: eu-west-1
-          role-duration-seconds: 3000
-          role-session-name: OPGModernisingLPATerraformGithubAction
+      # - name: Configure AWS Credentials For Terraform
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     role-to-assume: arn:aws:iam::631181914621:role/modernising-lpa-github-actions-terraform
+      #     aws-region: eu-west-1
+      #     role-duration-seconds: 3000
+      #     role-session-name: OPGModernisingLPATerraformGithubAction
       - uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.ssh_deploy_key }}
