--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -34,6 +34,9 @@ on:
       ssh_deploy_key:
         description: 'SSH Deploy Key'
         required: true
+      github_token:
+        description: 'Github Token'
+        required: true
 
 jobs:
   terraform_environment_workflow:
@@ -88,6 +91,7 @@ jobs:
 
       - uses: actions/github-script@v6
         with:
+          github-token: ${{ secrets.github_token }}
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
