--- a/.github/workflows/send_pr_comment.yml
+++ b/.github/workflows/send_pr_comment.yml
@@ -27,5 +27,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: ${{ inputs.body }}
+              body: '${{ inputs.body }}'
             })
