fix end of output

--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -108,8 +108,13 @@ jobs:
               return comment.user.type === 'Bot' && comment.body.includes('Terraform Plan Summary')
             })
 
-            // 2. Prepare format of the comment
+            const output = `#### Terraform Plan Summary 📖\`
+            <details><summary>Show Plan</summary>
 
+            \`\`\`\n
+            ${{ steps.terraform_plan.outputs.plan_summary }}
+            \`\`\`
+            </details>`;
 
             // 3. If we have a comment, update it, otherwise create a new one
             if (botComment) {
@@ -117,14 +122,14 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 comment_id: botComment.id,
-                body: '${{ steps.terraform_plan.outputs.plan_summary }}'
+                body: output
               })
             } else {
               github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: '${{ steps.terraform_plan.outputs.plan_summary }}'
+                body: output
               })
             }
 
