--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -89,7 +89,7 @@ jobs:
           TF_VAR_container_version: ${{ inputs.version_tag }}
         run: |
           terraform workspace show
-          echo "plan_summary=$(terraform plan -lock-timeout=300s -input=false -parallelism=30 | grep -E 'Plan: [0-9]+ to add, [0-9]+ to change, [0-9]+ to destroy')" >> $GITHUB_OUTPUT
+          echo "plan_summary=$(terraform plan -lock-timeout=300s -input=false -parallelism=30 | grep -iE 'Plan:' | sed 's/\x1b\[[0-9;]*[mGK]//g')" >> $GITHUB_OUTPUT
           terraform plan -lock-timeout=300s -input=false -parallelism=30
 
         working-directory: ./terraform/environment
