--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -34,6 +34,13 @@ on:
       ssh_deploy_key:
         description: 'SSH Deploy Key'
         required: true
+      github_access_token:
+        description: 'Github Token'
+        required: true
+
+permissions:
+  pull-requests: write
+  issues: write
 
 jobs:
   terraform_environment_workflow:
@@ -75,13 +82,52 @@ jobs:
         working-directory: ./terraform/environment
 
       - name: Terraform Plan
+        id: terraform_plan
         env:
           TF_WORKSPACE: ${{ inputs.workspace_name }}
           TF_VAR_container_version: ${{ inputs.version_tag }}
         run: |
           terraform workspace show
+          echo "plan_summary=$(terraform plan -no-color -lock-timeout=300s -input=false -parallelism=30 | grep -ioE 'Plan: [[:digit:]]+ to add, [[:digit:]]+ to change, [[:digit:]]+ to destroy|No changes. Your infrastructure matches the configuration.')" >> $GITHUB_OUTPUT
           terraform plan -lock-timeout=300s -input=false -parallelism=30
+
         working-directory: ./terraform/environment
+
+      - uses: actions/github-script@v6
+        name: Add plan summary to PR comment
+        with:
+          github-token: ${{ secrets.github_access_token }}
+          script: |
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            })
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('PR Environment Terraform Plan Summary')
+            })
+
+            const output = `### PR Environment Terraform Plan Summary
+            \n
+            ${{ steps.terraform_plan.outputs.plan_summary }}`;
+
+            // 3. If we have a comment, update it, otherwise create a new one
+            if (botComment) {
+              github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              })
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
+            }
 
       - name: Protect environment workspace
         if: github.ref != 'refs/heads/main'
