--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -95,6 +95,7 @@ jobs:
 
       - uses: actions/github-script@v6
         name: Add plan summary to PR comment
+        if: github.ref != 'refs/heads/main'
         with:
           github-token: ${{ secrets.github_access_token }}
           script: |
