manage public access to all environments in github actions

--- a/.github/workflows/toggle_public_access_job.yml
+++ b/.github/workflows/toggle_public_access_job.yml
@@ -22,7 +22,7 @@ on:
 
 
 jobs:
-  terraform_environment_workflow:
+  toggle_public_access:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
