--- a/.github/workflows/terraform_environment_job.yml
+++ b/.github/workflows/terraform_environment_job.yml
@@ -18,7 +18,7 @@ on:
         description: 'Enable public access to the environment?'
         default: false
         required: false
-        type: string
+        type: boolean
     outputs:
       terraform_workspace_name:
         description: "Name of Terraform workspace"
