--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
       - name: Extract branch name
         id: extract_branch
         run: |
