--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -35,8 +35,9 @@ jobs:
           fi
       - name: Bump version
         id: bump_version
-        uses: anothrNick/github-tag-action@1.55.0
+        uses: anothrNick/github-tag-action@1.61.0
         env:
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           INITIAL_VERSION: 0.0.0
           DEFAULT_BUMP: minor
