set to verbose so we can see what's missing

--- a/.github/workflows/tags_job.yml
+++ b/.github/workflows/tags_job.yml
@@ -44,6 +44,7 @@ jobs:
           PRERELEASE_SUFFIX: ${{ env.BRANCH_NAME }}
           RELEASE_BRANCHES: main
           WITH_V: true
+          VERBOSE: true
     outputs:
       docker_tag: ${{ steps.bump_version.outputs.tag }}
 
